[gd_scene load_steps=3 format=3 uid="uid://ck8b4s84vo1kl"]

[ext_resource type="Script" path="res://scenes/menus/start_menu.gd" id="1_l0twi"]
[ext_resource type="FontFile" uid="uid://dsn7f2g76y1vo" path="res://assets/alagard.ttf" id="2_1yvkq"]

[node name="start_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0twi")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 241.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1yvkq")
text = "Start Game"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1yvkq")
text = "Exit Game"

[node name="FullScreen" type="CheckButton" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1yvkq")
text = "Set To Fullscreen"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/FullScreen" to="." method="_on_full_screen_toggled"]
